--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,4 +12,11 @@
         android:text="Google Fit Demo"
         />
 
+    <Button
+        android:id="@+id/btn_map_demo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Google Map Demo"
+        />
+
 </LinearLayout>
