--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,4 +19,11 @@
         android:text="Google Map Demo"
         />
 
+    <Button
+        android:id="@+id/btn_recording_demo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Recording demo"
+        />
+
 </LinearLayout>
