--- a/app/src/main/res/layout/activity_recording_demo.xml
+++ b/app/src/main/res/layout/activity_recording_demo.xml
@@ -12,11 +12,24 @@
         android:text="@string/start_recording"
         />
 
+    <TextView
+        android:id="@+id/txt_distance"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/btn_toggle_recording"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="5 m"
+        android:textColor="#7b1fff"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        />
+
     <com.google.android.gms.maps.MapView
         android:id="@+id/map"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/btn_toggle_recording"
+        android:layout_above="@id/txt_distance"
         />
 
 </RelativeLayout>
