--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,9 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="card_horizontal_margin">10dp</dimen>
+    <dimen name="card_vertical_margin">5dp</dimen>
+    <dimen name="card_vertical_margin_large">20dp</dimen>
+    <dimen name="card_icon_size">48dp</dimen>
 </resources>
