--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,16 +1,43 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivityFragment">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+    <Button
+        android:id="@+id/btn_fit_demo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Google Fit Demo"
+        />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/btn_map_demo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Google Map Demo"
+        />
+
+    <Button
+        android:id="@+id/btn_recording_demo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Recording demo"
+        />
+
+    <Button
+        android:id="@+id/btn_show_sessions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Show sessions"
+        />
+
+    <Button
+        android:id="@+id/btn_logout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Logout"
+        />
+
+</LinearLayout>
