--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,16 +1,16 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryDark">@color/green_dark</item>
+        <item name="colorAccent">@android:color/white</item>
         <item name="colorControlActivated">@color/blue</item>
     </style>
 
     <style name="DrawerTheme" parent="MaterialNavigationDrawerTheme.Light.DarkActionBar">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">@color/green</item>
+        <item name="colorPrimaryDark">@color/green_dark</item>
+        <item name="colorAccent">@android:color/white</item>
         <item name="colorControlActivated">@color/blue</item>
         <item name="sectionStyle">@style/SectionTheme</item>
         <item name="singleAccount">true</item>
@@ -23,6 +23,16 @@
         <item name="sectionColorText">@android:color/white</item>
         <item name="sectionBackgroundColorPressed">@color/gray</item>
         <item name="sectionBackgroundColorSelected">@color/gray_2</item>
+    </style>
+
+    <style name="FontDefault">
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="FontHeader">
+        <item name="android:textColor">@color/green</item>
+        <item name="android:textSize">24sp</item>
     </style>
 
 </resources>
