ui: add empty ChallengeDetailsActivity

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
 
     <color name="blue">#ff0b98dd</color>
 
+    <color name="gray_light">#d5d5d5</color>
     <color name="gray">#ff8d8d8d</color>
     <color name="gray_2">#ff606060</color>
     <color name="gray_dark">#ff424242</color>
