--- a/app/src/main/res/layout/card_challenge_overview.xml
+++ b/app/src/main/res/layout/card_challenge_overview.xml
@@ -3,11 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginRight="@dimen/card_horizontal_margin"
-    android:layout_marginLeft="@dimen/card_horizontal_margin"
-    android:layout_marginTop="@dimen/card_vertical_margin"
-    android:layout_marginBottom="@dimen/card_vertical_margin"
-
+    style="@style/CardStyle"
     >
 
     <RelativeLayout
