--- a/app/src/main/res/layout/activity_challenge_details.xml
+++ b/app/src/main/res/layout/activity_challenge_details.xml
@@ -1,131 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
+    android:paddingBottom="@dimen/list_padding_bottom"
+    android:clipToPadding="false"
+    android:scrollbars="none"
     >
 
-    <RelativeLayout
+    <LinearLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         >
 
-        <ImageView
-            android:id="@+id/img_challenge"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:src="@drawable/challenge_great_wall_of_china"
-            />
+            android:layout_height="200dp"
+            >
 
-        <TextView
-            android:id="@+id/txt_name"
-            android:layout_width="wrap_content"
+            <ImageView
+                android:id="@+id/img_challenge"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/challenge_great_wall_of_china"
+                />
+
+            <TextView
+                android:id="@+id/txt_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Great Wall of China"
+                android:layout_alignParentBottom="true"
+                android:textColor="@android:color/white"
+                android:textSize="30sp"
+                android:layout_margin="10dp"
+                />
+
+        </RelativeLayout>
+
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Great Wall of China"
-            android:layout_alignParentBottom="true"
-            android:textColor="@android:color/white"
-            android:textSize="30sp"
-            android:layout_margin="10dp"
-            />
-
-    </RelativeLayout>
-
-
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        style="@style/CardStyle"
-        >
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            style="@style/CardStyle"
             >
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Statistics"
-                android:layout_margin="15dp"
-                style="@style/FontDefault.Green"
-                />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
 
-            <include layout="@layout/separator"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Statistics"
+                    android:layout_margin="15dp"
+                    style="@style/FontDefault.Green"
+                    />
 
-            <TextView
-                android:id="@+id/txt_distance"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="12013 km total"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="15dp"
-                style="@style/FontDefault"
-                />
+                <include layout="@layout/separator"/>
 
-            <TextView
-                android:id="@+id/txt_distance_completed"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="1201 km completed (10 %)"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                style="@style/FontDefault"
-                />
+                <TextView
+                    android:id="@+id/txt_distance"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="12013 km total"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="15dp"
+                    style="@style/FontDefault"
+                    />
 
-            <TextView
-                android:id="@+id/txt_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="14.2 hours of running in 42 days"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="15dp"
-                style="@style/FontDefault"
-                />
+                <TextView
+                    android:id="@+id/txt_distance_completed"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="1201 km completed (10 %)"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    style="@style/FontDefault"
+                    />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/txt_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="14.2 hours of running in 42 days"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="15dp"
+                    style="@style/FontDefault"
+                    />
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
 
 
-    <android.support.v7.widget.CardView
-        style="@style/CardStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        >
-
-        <LinearLayout
+        <android.support.v7.widget.CardView
+            style="@style/CardStyle"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             >
 
-            <TextView
-                style="@style/FontDefault.Green"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="15dp"
-                android:text="Recent activities"
-                />
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                >
 
-            <include layout="@layout/separator"/>
+                <TextView
+                    style="@style/FontDefault.Green"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="15dp"
+                    android:text="Recent activities"
+                    />
 
-            <ListView
-                android:id="@+id/list_recent_activities"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:divider="@drawable/separator_padded"
-                android:dividerHeight="1dp"
-                />
+                <include layout="@layout/separator"/>
 
-        </LinearLayout>
+                <org.faudroids.keepgoing.ui.ExpandedListView
+                    android:id="@+id/list_recent_activities"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:divider="@drawable/separator_padded"
+                    android:dividerHeight="1dp"
+                    android:overScrollMode="never"
+                    />
 
-    </android.support.v7.widget.CardView>
+            </LinearLayout>
 
-</LinearLayout>
+        </android.support.v7.widget.CardView>
 
+    </LinearLayout>
+
+</ScrollView>
