--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
     <dimen name="card_icon_size">48dp</dimen>
 
     <dimen name="map_bounds_padding">15dp</dimen>
+
+    <dimen name="list_padding_bottom">128dp</dimen>
 </resources>
