--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="blue">#ff0b98dd</color>
 
     <color name="gray_light">#d5d5d5</color>
+    <color name="gray_light_2">#c4c4c4</color>
     <color name="gray">#ff8d8d8d</color>
     <color name="gray_2">#ff606060</color>
     <color name="gray_dark">#ff424242</color>
