ui: add selectable background

--- a/app/src/main/res/layout/card_challenge_open.xml
+++ b/app/src/main/res/layout/card_challenge_open.xml
@@ -27,6 +27,7 @@
             android:padding="15dp"
             android:layout_below="@id/img_challenge"
             android:orientation="vertical"
+            android:background="@drawable/selector_gray"
             >
 
             <TextView
