--- a/app/src/main/res/layout/item_recent_activity.xml
+++ b/app/src/main/res/layout/item_recent_activity.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="15dp"
+    android:background="@drawable/selector_gray"
     >
 
     <TextView
