--- a/app/src/main/res/layout/fragment_challenge_overview.xml
+++ b/app/src/main/res/layout/fragment_challenge_overview.xml
@@ -1,4 +1,4 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,5 +11,16 @@
         android:layout_height="match_parent"
         />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/txt_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/no_finished_challenges"
+        android:textStyle="italic"
+        android:visibility="gone"
+        style="@style/FontSecondary"
+        />
+
+</RelativeLayout>
 
