--- a/app/src/main/res/layout/activity_all_activities.xml
+++ b/app/src/main/res/layout/activity_all_activities.xml
@@ -1,17 +1,31 @@
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >
 
-    <include layout="@layout/toolbar" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
+        android:layout_below="@id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/txt_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/no_activities"
+        android:textStyle="italic"
+        style="@style/FontSecondary"
+        />
+
+</RelativeLayout>
 
