ui: add running icon to add activity button

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="green_dark">#558b2f</color>
 
     <color name="blue">#ff0b98dd</color>
+    <color name="blue_dark">#0878ae</color>
 
     <color name="gray_light">#d5d5d5</color>
     <color name="gray_light_2">#c4c4c4</color>
