--- a/app/src/main/res/layout/activity_challenge_details.xml
+++ b/app/src/main/res/layout/activity_challenge_details.xml
@@ -161,16 +161,16 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-    <com.getbase.floatingactionbutton.AddFloatingActionButton
+    <com.getbase.floatingactionbutton.FloatingActionButton
         android:id="@+id/btn_add_session"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:layout_marginRight="16dp"
         android:layout_gravity="bottom|right"
-        app:fab_colorNormal="@color/red"
-        app:fab_colorPressed="@color/red_dark"
-        app:fab_plusIconColor="@android:color/white"
+        app:fab_icon="@drawable/ic_directions_run_white_36dp"
+        app:fab_colorNormal="@color/blue"
+        app:fab_colorPressed="@color/blue_dark"
         />
 
 </android.support.design.widget.CoordinatorLayout>
