--- a/app/src/main/res/layout/activity_recording.xml
+++ b/app/src/main/res/layout/activity_recording.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="00:00:00"
-            android:textColor="@color/green"
+            android:textColor="@color/colorPrimary"
             android:textSize="50sp"
             android:layout_centerHorizontal="true"
             />
