--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="green">#8bc34a</color>
-    <color name="green_dark">#558b2f</color>
 
     <color name="blue">#ff0b98dd</color>
     <color name="blue_dark">#0878ae</color>
@@ -14,4 +12,17 @@
 
     <color name="red">#ffdd0000</color>
     <color name="red_dark">#ffad0000</color>
+
+    <color name="material_drawer_background">#ffffff</color>
+    <color name="material_drawer_primary_text">#000000</color>
+    <color name="material_drawer_primary_icon">#7d7d7d</color>
+    <color name="material_drawer_selected">#ececec</color>
+    <color name="material_drawer_selected_text">#2196F3</color>
+    <color name="material_drawer_header_selection_text">#000000</color>
+
+    <color name="colorPrimary">#8bc34a</color>
+    <color name="colorPrimaryDark">#558b2f</color>
+    <color name="colorAccent">#fff</color>
+    <color name="colorControlActivated">#ff0b98dd</color>
+
 </resources>
