--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
     <color name="material_drawer_primary_icon">#7d7d7d</color>
     <color name="material_drawer_selected">#ececec</color>
     <color name="material_drawer_selected_text">#2196F3</color>
-    <color name="material_drawer_header_selection_text">#000000</color>
+    <color name="material_drawer_header_selection_text">#ffffff</color>
 
     <color name="colorPrimary">#8bc34a</color>
     <color name="colorPrimaryDark">#558b2f</color>
