--- a/app/src/main/res/layout/activity_challenge_details.xml
+++ b/app/src/main/res/layout/activity_challenge_details.xml
@@ -122,10 +122,11 @@
             </android.support.v7.widget.CardView>
 
             <android.support.v7.widget.CardView
-                style="@style/CardStyle"
+                android:id="@+id/card_recent_activities"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
+                style="@style/CardStyle"
                 >
 
                 <LinearLayout
