--- a/app/src/main/res/layout/fragment_challenge_overview.xml
+++ b/app/src/main/res/layout/fragment_challenge_overview.xml
@@ -1,5 +1,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -25,5 +26,13 @@
         style="@style/FontSecondary"
         />
 
-</RelativeLayout>
+    <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerInParent="true"
+        app:mlpb_progress_stoke_width="4dp"
+        app:mlpb_progress_color="@color/colorPrimary"
+        />
 
+</RelativeLayout>
